History
=======

2.0 rc2 (unreleased)
--------------------

- Optionally disabled filtering of empty fields. [reinout]

- Translation improvement for boolean fields. [reinout]

- Small pdf page margin changes. [reinout]

- Rent/buy is now a fixed vocabulary (needed for a userfriendly default
  value). [reinout]

2.0 rc
------

- Translated the schemata names and the workflow names (in a separate
  old-style Product: reb_i18n) [Reinout van Rees]

- Added rent/buy field to Residential, too.